--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "square-table",
+  "name": "pixel-grid",
   "version": "1.0.0",
-  "description": "render a table of small squares",
+  "description": "render a grid of small squares",
   "main": "example.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -27,6 +27,9 @@
   "dependencies": {
     "flatten": "^1.0.2",
     "is-array": "^1.0.1",
+    "is-number": "^2.1.0",
+    "is-string": "^1.0.4",
+    "parse-color": "^1.0.0",
     "regl": "^0.11.0"
   }
 }
