--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "pixel-grid",
   "version": "1.0.0",
-  "description": "render a grid of small squares",
+  "description": "render a grid of little squares",
   "main": "example.js",
   "scripts": {
+    "start": "budo example.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -12,6 +13,7 @@
   },
   "keywords": [
     "visualization",
+    "pixels",
     "webgl",
     "squares",
     "table",
@@ -29,6 +31,7 @@
     "is-array": "^1.0.1",
     "is-number": "^2.1.0",
     "is-string": "^1.0.4",
+    "mouse-position": "^2.0.1",
     "parse-color": "^1.0.0",
     "regl": "^0.11.0"
   }
