Use index.js for main module export
Though the example grid was nice to see =).

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pixel-grid",
   "version": "1.0.0",
   "description": "render a grid of little squares",
-  "main": "example.js",
+  "main": "index.js",
   "scripts": {
     "test": "standard && tape test.js | tap-spec",
     "start": "budo example.js",
